--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,24 @@
----
-layout: compress
----
-
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" <![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
-     {% include masthead.html %}
+<body>
 
-      <main id="main" role="main">
-	      
-        {{ content }}
-      </main>
+   {% include header.html %}
 
-    {% include footer.html %}
+   <div class="content">
+      <div class="container">
+         {{ content }}
+      </div>
+   </div><!-- end .content -->
 
-  </body>
+   {% include footer.html %}
+   {% include scripts.html %}
+
+</body>
+
 </html>
